--- a/sass/elements/game/_blacksmith.scss
+++ b/sass/elements/game/_blacksmith.scss
@@ -30,6 +30,9 @@
             @include laptopL {
                 border-right: 4px solid $color-gray_dark;
             }
+            @include tablet {
+                border-right: none;
+            }
             
         }
         &:last-child {
@@ -58,6 +61,9 @@
         }
         @include mobileL {
             width: 425px;
+        }
+        @include mobileM {
+            width: 375px;
         }
     }
     &__frame{
