--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -15,6 +15,9 @@
         width: 100%;
         height: calc(100% - 52px);
     }
+    @include mobileM {
+        height: calc(100% - 43px);
+    }
     ::-webkit-scrollbar {
         width: 0;
     }
