--- a/sass/elements/game/_travel.scss
+++ b/sass/elements/game/_travel.scss
@@ -10,6 +10,10 @@
             background-size: 158% 100%;
             background-position: 50%;
         }
+        @include mobileL {
+            background-size: 190% 100%;
+            
+        }
     &__title{
         font-family: $fontFamily-medivalSharp;
         color:$color-blue;
@@ -30,6 +34,14 @@
         @include laptopS {
           border-radius: 10px;
           padding: 5px;
+        }
+        @include mobileL {
+            font-size: 22px;
+        }
+        @include mobileM {
+            font-size: 20px;
+            border-radius: 7px;
+            margin-top: 6px;
         }
     }
     &__countdownWrapper{
