--- a/sass/elements/game/_account.scss
+++ b/sass/elements/game/_account.scss
@@ -40,6 +40,11 @@
             border-radius: 13px;
             padding: 2px 5px;
         }
+        @include mobileS {
+            width: 310px;
+            border-radius: 10px;
+            padding: 1px 3px;
+        }
     }
     &__title {
         text-align: center;
@@ -73,6 +78,9 @@
         @include mobileM {
             font-size: 29px;
         }
+        @include mobileS {
+            font-size: 24px;
+        }
     }
     &__element {
         height: 66px;
@@ -94,6 +102,9 @@
         }
         @include tablet {
             height: 49px;
+        }
+        @include mobileS {
+            height: 38px;
         }
     }
     &__elementIcon {
@@ -120,6 +131,9 @@
         }
         @include mobileL {
             width: 49px;
+        }
+        @include mobileS {
+            width: 38px;
         }
     }
     &__elementContent {
@@ -168,6 +182,9 @@
         @include mobileL {
             height: 34px;
             padding-left: 16px;
+        }
+        @include mobileS {
+            height: 28px;
         }
     }
     &__msg {
@@ -278,6 +295,12 @@
             right: auto;
             bottom: auto;
             margin-top: 25px;
+        }
+        @include mobileS {
+            right: 6px;
+            bottom: 6px;
+            height: 37px;
+            width: 38px;
         }
     }
     &__deleteCode {
