--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -216,6 +216,10 @@
         width: 30px;
         height: 30px;
     }
+    @include mobileS {
+        width: 24px;
+        height: 24px;
+    }
     &__searchFriend {
         top: 7px;
         right: calc(50% - 23px);
