--- a/sass/elements/game/_pets.scss
+++ b/sass/elements/game/_pets.scss
@@ -5,8 +5,8 @@
     background-size: 100% 100%;
     overflow: auto;
     @include tablet {
-            padding-bottom: 40px;
-        }
+        padding-bottom: 40px;
+    }
     &__wrapper {
         display: flex;
         align-items: center;
@@ -31,7 +31,6 @@
         @include mobileL {
             padding-top: 11px;
         }
-        
     }
     &__userGoldWrapper {
         display: flex;
@@ -51,7 +50,7 @@
             border-radius: 16px;
         }
         @include laptopS {
-            border-radius:  10px;
+            border-radius: 10px;
         }
         @include ipadPro {
             border-radius: 20px;
@@ -97,22 +96,22 @@
         transition: 0.3s;
         @media screen and (min-width: 1228px) {
             &:hover {
-            background: rgba(255, 255, 255, 0.7);
-            width: 21%;
-        } 
+                background: rgba(255, 255, 255, 0.7);
+                width: 21%;
+            }
         }
-       
+
         @include desktopM {
             width: 22%;
             height: 517px;
             padding: 11px;
         }
-        @include desktopS{
+        @include desktopS {
             height: 466px;
             border-radius: 16px;
             padding: 8px;
         }
-        @include desktopS{
+        @include desktopS {
             height: 412px;
             padding: 7px;
         }
@@ -127,8 +126,9 @@
             height: 566px;
             width: 45%;
             border-radius: 20px;
-            margin: 0 17px ;
-            &:nth-child(3), &:nth-child(4){
+            margin: 0 17px;
+            &:nth-child(3),
+            &:nth-child(4) {
                 margin-top: 36px;
             }
         }
@@ -136,18 +136,19 @@
             width: 91%;
             height: 522px;
 
-            &:nth-child(3), &:nth-child(4){
+            &:nth-child(3),
+            &:nth-child(4) {
                 margin: 0;
                 margin-bottom: 30px;
             }
             margin-bottom: 30px;
-
         }
         @include mobileL {
             border-radius: 16px;
             display: flex;
             height: 250px;
-            &:nth-child(3), &:nth-child(4){
+            &:nth-child(3),
+            &:nth-child(4) {
                 margin: 0;
                 margin-bottom: 20px;
             }
@@ -157,20 +158,24 @@
             height: 198px;
             border-radius: 13px;
         }
+        @include mobileS {
+            height: 170px;
+            border-radius: 10px;
+        }
     }
-    &__imgWrapper{
-          @include mobileL {
-              width: 40%;
-          }
+    &__imgWrapper {
+        @include mobileL {
+            width: 40%;
+        }
     }
-    &__label{
+    &__label {
         @include mobileL {
             width: 60%;
         }
     }
     &__current {
         border: 8px solid $color-gold;
-        @include desktopS{
+        @include desktopS {
             border: 6px solid $color-gold;
         }
         @include laptopM {
@@ -183,8 +188,12 @@
             border: 10px solid $color-gold;
         }
         @include mobileL {
-            border: 6px solid  $color-gold;
+            border: 6px solid $color-gold;
             margin-bottom: 40px !important;
+        }
+        @include mobileS {
+            border: 4px solid $color-gold;
+            margin-bottom: 24px  !important;
         }
     }
     &__countdownWrapper {
@@ -202,10 +211,10 @@
         color: $color-white;
         font-size: 30px;
         border-radius: 0 0 20px 20px;
-        @include desktopS{
-         bottom: -30px;
-         font-size: 25px;
-         border-radius: 0 0 16px 16px;
+        @include desktopS {
+            bottom: -30px;
+            font-size: 25px;
+            border-radius: 0 0 16px 16px;
         }
         @include laptopM {
             font-size: 21px;
@@ -232,13 +241,17 @@
             bottom: -27px;
         }
         @include mobileM {
-           font-size: 19px;
+            font-size: 19px;
             border-radius: 0 0 13px 13px;
             padding: 3px 0;
-            bottom: -24px; 
+            bottom: -24px;
         }
-            
-        
+        @include mobileS {
+            font-size: 16px;
+            border-radius: 0 0 10px 10px;
+            padding: 3px 0;
+            bottom: -21px;
+        }
     }
     &__img {
         width: 100%;
@@ -258,9 +271,9 @@
         @include mobileL {
             width: 50%;
         }
-          @media screen and (max-width: 670px) {
-              width: 87%;
-          }
+        @media screen and (max-width: 670px) {
+            width: 87%;
+        }
     }
 
     &__name {
@@ -335,7 +348,6 @@
         }
         @include mobileL {
             justify-content: flex-start;
-         
         }
     }
     &__benefits {
@@ -363,6 +375,9 @@
         }
         @include mobileM {
             font-size: 13px;
+        }
+        @include mobileS {
+            font-size: 12px;
         }
     }
     &__buy {
