media - profile - equipment label

--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -561,6 +561,9 @@
             @include mobileL {
                 font-size: 13px;
             }
+            @include mobileS {
+                font-size: 11px;
+            }
             
         }
         @include laptopM {
