--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -70,6 +70,9 @@
             @include mobileM {
                 height: 344px;
             }
+            @include mobileS {
+                height: 282px;
+            }
         }
         &-currentUser {
             @include desktopM {
@@ -94,6 +97,9 @@
             }
             @include mobileM {
                 height: 344px;
+            }
+            @include mobileS {
+                height: 282px;
             }
         }
     }
@@ -288,6 +294,9 @@
             @include ipadPro {
                 border: 4px solid $color-blue;
             }
+            @include mobileM {
+                border: 3px solid $color-blue;
+            }
         }
         &-legendary {
             border: 4px solid $color-gold;
@@ -299,6 +308,9 @@
             }
             @include ipadPro {
                 border: 4px solid $color-gold;
+            }
+            @include mobileM {
+                border: 3px solid $color-gold;
             }
         }
         &::after {
@@ -353,6 +365,9 @@
             @include mobileM {
                 left: 94px;
             }
+            @include mobileS {
+                left: 75px;
+            }
         }
         &-weapon {
             top: 0;
@@ -388,6 +403,9 @@
             }
             @include mobileM {
                 right: 94px;
+            }
+            @include mobileS {
+               right: 75px;
             }
         }
 
@@ -425,6 +443,9 @@
             }
             @include mobileM {
                 left: 94px;
+            }
+            @include mobileS {
+                left: 75px;
             }
         }
 
@@ -466,6 +487,9 @@
             @include mobileM {
                 right: 94px;
             }
+            @include mobileS {
+                right: 75px;
+            }
         }
 
         &-gloves {
@@ -502,6 +526,9 @@
             }
             @include mobileM {
                 left: 94px;
+            }
+            @include mobileS {
+                left: 75px;
             }
         }
 
@@ -540,6 +567,9 @@
             @include mobileM {
                 right: 94px;
             }
+            @include mobileS {
+                right: 75px;
+            }
         }
         .itemTitle {
             color: $color-white;
@@ -550,6 +580,14 @@
             @include ipadPro {
                 margin-top: 7px;
                 font-size: 18px;
+            }
+            @include mobileL {
+                font-size: 16px;
+                margin-top: 5px;
+            }
+            @include mobileS {
+                font-size: 14px;
+                margin-top: 3px;
             }
         }
         .itemDsc {
@@ -621,6 +659,9 @@
             height: 23px;
             margin-bottom: 5px;
         }
+        @include mobileS {
+            margin-bottom: 0px;
+        }
     }
     &__equipmentItemSellWrapper {
         height: 30px;
@@ -658,6 +699,9 @@
         }
         @include mobileM {
             height: 23px;
+        }
+        @include mobileS {
+            margin-top: 4px;
         }
     }
 
@@ -739,6 +783,12 @@
             border: 3px solid $color-gray_dark;
             margin: 4px auto;
         }
+        @include mobileS {
+            height: 25px;
+            font-size: 20px;
+            margin: 3px auto;
+        
+        }
     }
     &__levelProgress {
         z-index: -1;
@@ -776,6 +826,10 @@
         @include mobileL {
             padding: 4px 0;
             border-radius: 5px;
+        }
+        @include mobileS {
+            padding: 2px 0;
+            border-radius: 4px;
         }
     }
     &__equipmentIcon {
@@ -978,6 +1032,10 @@
             width: 72px;
             height: 72px;
         }
+        @include mobileS {
+            width: 62px;
+            height: 62px;
+        }
     }
 
     &__backpackItemGraphic {
@@ -1155,6 +1213,10 @@
         }
         @include mobileL {
             height: 30px;
+            margin: 5px auto;
+        }
+        @include mobileS {
+            height: 25px;
             margin: 5px auto;
         }
     }
