--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -29,7 +29,16 @@
             padding: 6px;
         }
         @include tablet {
-            width: 100%;
+            width: 768px;
+        }
+        @include mobileL {
+            width: 425px;
+        }
+        @include mobileM {
+            width: 375px;
+        }
+        @include mobileS {
+            width: 320px;
         }
     }
     &__equipment {
@@ -177,6 +186,9 @@
         @include mobileM {
             margin-top: 60px;
         }
+        @include mobileS {
+            margin-top: 44px;
+        }
     }
     &__portraitActionBar {
         position: absolute;
@@ -222,6 +234,11 @@
             width: 28px;
             transform: translateY(-1px);
         }
+        @include mobileS {
+            height: 16px;
+            width: 24px;
+            transform: translateY(4px);
+        }
     }
     &__portraitActionIcon {
         width: 27px;
@@ -240,6 +257,10 @@
         @include mobileL {
             height: 21px;
             margin: -1px 5px;
+        }
+        @include mobileS {
+            height: 17px;
+            margin: 4px 6px;
         }
     }
 
@@ -405,7 +426,7 @@
                 right: 94px;
             }
             @include mobileS {
-               right: 75px;
+                right: 75px;
             }
         }
 
@@ -787,7 +808,6 @@
             height: 25px;
             font-size: 20px;
             margin: 3px auto;
-        
         }
     }
     &__levelProgress {
@@ -880,6 +900,11 @@
                 width: 38px;
                 left: -21px;
             }
+            @include mobileS {
+                height: 28px;
+                width: 28px;
+                left: -15px;
+            }
         }
         &::after {
             content: "";
@@ -907,6 +932,11 @@
                 height: 38px;
                 width: 38px;
                 right: -21px;
+            }
+            @include mobileS {
+                height: 28px;
+                width: 28px;
+                right: -15px;
             }
         }
 
@@ -943,6 +973,9 @@
         @include mobileM {
             border: 3px solid $color-red;
             height: 253px;
+        }
+        @include mobileS {
+            height: 175px;
         }
     }
 
@@ -1065,6 +1098,9 @@
         @include mobileM {
             width: 360px;
         }
+        @include mobileS {
+            width: 310px;
+        }
     }
     &__general {
         display: flex;
@@ -1088,6 +1124,10 @@
         @include mobileM {
             width: 85px;
             margin-top: 6px;
+        }
+        @include mobileS {
+            width: 78px;
+            margin-top: 2px;
         }
     }
 
@@ -1140,6 +1180,11 @@
             height: 86px;
             border: 4px solid #aa6615;
         }
+        @include mobileS {
+            width: 69px;
+            height: 69px;
+            border: 3px solid #aa6615;
+        }
     }
     &__generalText {
         width: 120px;
@@ -1182,6 +1227,12 @@
             padding: 3px 0;
             margin-top: 5px;
             margin-bottom: 2px;
+        }
+        @include mobileS {
+            width: 69px;
+            padding: 3px 0;
+            margin-top: 4px;
+            margin-bottom: 0px;
         }
     }
     &__goldBar {
@@ -1310,6 +1361,7 @@
     background: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(3px);
 
+   
     table {
         width: 100%;
         //height: 100%;
@@ -1330,6 +1382,9 @@
         }
         @include mobileL {
             padding-top: 9px;
+        }
+        @include mobileS {
+            padding-top: 3px;
         }
     }
     tr {
@@ -1371,9 +1426,24 @@
     @include tablet {
         padding: 4px 0;
     }
+    @include mobileS {
+        padding-top: 10px;
+    }
 }
 .profile__generalLabelWrapper {
     position: absolute;
+    @include tablet {
+        width: 768px;
+    }
+    @include mobileL {
+        width: 410px;
+    }
+    @include mobileM {
+        width: 360px;
+    }
+    @include mobileS {
+        width: 310px;
+    }
 }
 #blacksmith_backpack_item_label,
 #blacksmith_equipment__item_label {
@@ -1451,6 +1521,11 @@
             font-size: 18px;
             padding: 2px 7px;
             border-radius: 7px;
+        }
+        @include mobileS {
+            font-size: 15px;
+            padding: 2px 6px;
+            border-radius: 5px;
         }
     }
 }
